--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
-  "name": "emusak-ng",
+  "author": "Mark Steele",
+  "name": "musakbox",
+  "description": "Online Streaming Musak Player",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@aws-amplify/ui-react": "^0.2.21",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aws-amplify": "^3.3.1",
+    "cross-env": "6.0.2",
+    "electron-is-dev": "^1.2.0",
+    "electron-log": "^3.0.8",
     "lscache": "^1.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-menu-list": "^7.0.1",
-    "react-scripts": "3.4.3"
+    "react-toggle": "^4.1.1",
+    "update-electron-app": "^1.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build && npm run build-sw",
+    "react-test": "react-scripts test --env=jsdom",
+    "react-eject": "react-scripts eject",
+    "electron-build": "electron-builder",
+    "build-sw": "node ./src/sw-build.js",
+    "release": "yarn react-build && electron-builder --publish=always",
+    "build": "yarn react-build && yarn electron-build",
+    "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +46,24 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "electron": "^10.1.2",
+    "electron-builder": "^22.8.1",
+    "react-scripts": "3.1.2",
+    "wait-on": "^5.2.0",
+    "workbox-build": "^5.1.4"
+  },
+  "main": "public/electron.js",
+  "build": {
+    "appId": "io.squelsh.musakbox",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   }
 }
