--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "electron-build": "electron-builder",
     "build-sw": "node ./src/sw-build.js",
     "release": "yarn react-build && electron-builder --publish=always",
-    "build": "yarn react-build && yarn electron-build",
+    "build": "react-scripts build && npm run build-sw",
+    "build-electron": "yarn react-build && yarn electron-build",
     "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
