--- a/package.json
+++ b/package.json
@@ -7,18 +7,29 @@
   "homepage": "./",
   "dependencies": {
     "@aws-amplify/ui-react": "^0.2.21",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@material-ui/core": "^4.9.8",
+    "@material-ui/icons": "^4.9.1",
     "aws-amplify": "^3.3.1",
     "cross-env": "6.0.2",
     "electron-is-dev": "^1.2.0",
     "electron-log": "^3.0.8",
+    "framer-motion": "^2.7.2",
+    "fuse.js": "^6.4.1",
     "lscache": "^1.3.0",
+    "material-ui": "^0.20.2",
     "react": "^16.13.1",
+    "react-app-location": "^1.2.0",
+    "react-circle-slider": "^1.6.2",
     "react-dom": "^16.13.1",
+    "react-ga": "^2.7.0",
     "react-menu-list": "^7.0.1",
-    "react-toggle": "^4.1.1",
+    "react-recaptcha-v3": "^1.1.0",
+    "react-router-dom": "^5.1.2",
+    "react-swipeable": "^5.5.1",
+    "react-virtualized": "^9.21.2",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window-dynamic": "^1.8.0-alpha.1",
+    "typeface-roboto": "0.0.75",
     "update-electron-app": "^1.2.0"
   },
   "scripts": {
@@ -54,7 +65,10 @@
     "electron-builder": "^22.8.1",
     "react-scripts": "3.1.2",
     "wait-on": "^5.2.0",
-    "workbox-build": "^5.1.4"
+    "workbox-build": "^5.1.4",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2"
   },
   "main": "public/electron.js",
   "build": {
