--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-swipeable": "^5.5.1",
     "react-virtualized": "^9.21.2",
     "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
     "react-window-dynamic": "^1.8.0-alpha.1",
     "typeface-roboto": "0.0.75",
     "update-electron-app": "^1.2.0"
