--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@aws-amplify/ui-react": "^0.2.21",
     "@material-ui/core": "^4.9.8",
     "@material-ui/icons": "^4.9.1",
+    "@rehooks/online-status": "^1.1.2",
     "aws-amplify": "^3.3.1",
     "cross-env": "6.0.2",
     "electron-is-dev": "^1.2.0",
@@ -42,6 +43,7 @@
     "build-sw": "node ./src/sw-build.js",
     "release": "yarn react-build && electron-builder --publish=always",
     "build": "react-scripts build && npm run build-sw",
+    "build-run": "react-scripts build && npm run build-sw && http-server build",
     "build-electron": "yarn react-build && yarn electron-build",
     "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
