--- a/package.json
+++ b/package.json
@@ -6,45 +6,40 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
-    "@aws-amplify/ui-react": "^0.2.21",
-    "@material-ui/core": "^4.9.8",
-    "@material-ui/icons": "^4.9.1",
+    "@aws-amplify/ui-react": "^2.1.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@rehooks/online-status": "^1.1.2",
-    "aws-amplify": "^3.3.1",
+    "aws-amplify": "^4.3.8",
     "cross-env": "6.0.2",
-    "electron-is-dev": "^1.2.0",
-    "electron-log": "^3.0.8",
-    "framer-motion": "^2.7.2",
-    "fuse.js": "^6.4.1",
+    "framer-motion": "^2.9.5",
+    "fuse.js": "^6.4.6",
     "lscache": "^1.3.0",
     "material-ui": "^0.20.2",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-app-location": "^1.2.0",
     "react-circle-slider": "^1.6.2",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-ga": "^2.7.0",
-    "react-menu-list": "^7.0.1",
+    "react-menu-list": "^7.0.3",
     "react-recaptcha-v3": "^1.1.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.3.0",
     "react-swipeable": "^5.5.1",
-    "react-virtualized": "^9.21.2",
-    "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.5",
+    "react-virtualized": "^9.22.3",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.6",
     "react-window-dynamic": "^1.8.0-alpha.1",
-    "typeface-roboto": "0.0.75",
-    "update-electron-app": "^1.2.0"
+    "typeface-roboto": "0.0.75"
   },
   "scripts": {
     "react-start": "react-scripts start",
     "react-build": "react-scripts build && npm run build-sw",
     "react-test": "react-scripts test --env=jsdom",
     "react-eject": "react-scripts eject",
-    "electron-build": "electron-builder",
     "build-sw": "node ./src/sw-build.js",
-    "release": "yarn react-build && electron-builder --publish=always",
+    "release": "yarn react-build",
     "build": "react-scripts build && npm run build-sw",
     "build-run": "react-scripts build && npm run build-sw && http-server build",
-    "build-electron": "yarn react-build && yarn electron-build",
     "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
@@ -63,25 +58,12 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^5.3.0",
-    "electron": "^10.1.2",
-    "electron-builder": "^22.8.1",
-    "react-scripts": "3.1.2",
-    "wait-on": "^5.2.0",
-    "workbox-build": "^5.1.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2"
-  },
-  "main": "public/electron.js",
-  "build": {
-    "appId": "io.squelsh.musakbox",
-    "files": [
-      "build/**/*",
-      "node_modules/**/*"
-    ],
-    "directories": {
-      "buildResources": "assets"
-    }
+    "@testing-library/user-event": "^7.1.2",
+    "concurrently": "^5.3.0",
+    "react-scripts": "3.1.2",
+    "wait-on": "^5.3.0",
+    "workbox-build": "^5.1.4"
   }
 }
