--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
-    "@aws-amplify/ui-react": "^2.1.0",
+    "@aws-amplify/ui-react": "^2.1.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@rehooks/online-status": "^1.1.2",
@@ -39,8 +39,7 @@
     "build-sw": "node ./src/sw-build.js",
     "release": "yarn react-build",
     "build": "react-scripts build && npm run build-sw",
-    "build-run": "react-scripts build && npm run build-sw && http-server build",
-    "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
+    "build-run": "react-scripts build && npm run build-sw && http-server build"
   },
   "eslintConfig": {
     "extends": "react-app"
